added adv query

--- a/homeworks/catapp-wth-mongoose/views/cats.handlebars
+++ b/homeworks/catapp-wth-mongoose/views/cats.handlebars
@@ -2,6 +2,6 @@
 
 <ul>
    {{#each cats}}
-     <li style="font-size:20px">Cat Age:{{this.age}} ; Cat Name: {{this.name}} ; Color: {{this.color}}</li>
+     <li style="font-size:20px"> {{this.name}}, {{this.age}} years old, {{this.color}} fur color</li>
    {{/each}}
 </ul>
