--- a/homeworks/catapp-wth-mongoose/views/sortedbycolor.handlebars
+++ b/homeworks/catapp-wth-mongoose/views/sortedbycolor.handlebars
@@ -1,4 +1,4 @@
-<h1> These are all of the cats you have in {{catinformation.color}} fur</h2>
+<h1> All of the cats you have in {{catinformation.color}} fur</h2>
 
 <ul>
    {{#each catinformation.cat}}
